Fix Z-index

--- a/assets/css/modern.css
+++ b/assets/css/modern.css
@@ -24,7 +24,7 @@ section{
 }
 .portfolio-item {
     position: relative;
-    z-index: 20;
+    z-index: 5;
     display:flex;
     flex-direction:row;
     max-width:1024px;
@@ -76,7 +76,7 @@ section{
     width:100%;
     height:150%;
     overflow-x:hidden;
-    z-index: 10;
+    z-index: 4;
 }
 .c-box-holder-sm {
     height: 140%;
@@ -86,7 +86,7 @@ section{
 }
 .c-box {
     position: absolute;
-    z-index: 10;
+    z-index: 4;
     background: var(--c-box);
 }
 #colored-float1 {
@@ -118,12 +118,13 @@ section{
 
 
 #main {
-    z-index: -49;
+    position: relative;
+    z-index: 2;
     background-color: white;
     margin-bottom: 200px;
 }
 .fixed_footer{
-    z-index: -50;
+    z-index: 1;
     width: 100vw;
     height: 200px;
     background: var(--c-navy);
@@ -174,16 +175,16 @@ section{
     }
     .item-image {
         position: relative;
-        z-index: 70;
+        z-index: 21;
     }
     .item-image img {
         position: relative;
-        z-index: 70;
+        z-index: 21;
     }
     .item-image::after {
         content: '';
         position: absolute;
-        z-index: 69;
+        z-index: 20;
         top: -3%;
         left: 10%;
         height: 106%;
